[package]
name = "bma-ts"
version = "0.1.4"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/alttch/bma-ts"
description = "Bohemia Automation time library"
readme = "README.md"
keywords = ["time", "date"]

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = ["full"]

[dependencies]
chrono = { version = "0.4", optional = true }
dateparser = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
sqlx = { version = "0.7", optional = true, features = ["postgres", "sqlite"] }
thiserror = "1.0"

[target.'cfg(not(unix))'.dependencies]
once_cell = "1.19.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["time"] }

[features]
#default = [ "full" ]
chrono = ["dep:chrono", "dateparser"]
full = [ "chrono", "serde", "sqlx" ]
as-float-secs = []
